--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,11 +31,11 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 #  pinch_zoom: ^2.0.0
+  flutter_staggered_grid_view: ^0.7.0
 
 
 dev_dependencies:
